--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^12.1.10",
     "firebase": "^8.4.1",
     "react": "^17.0.2",
+    "react-chat-elements": "^10.14.0",
     "react-dom": "^17.0.2",
     "react-otp-input": "^2.3.0",
     "react-redux": "^7.2.3",
