--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "firebase": "^8.4.1",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-chat-elements": "^10.14.0",
     "react-dom": "^17.0.2",
